--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CrimePagerActivity">
+        <activity
+            android:name=".CrimePagerActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".CrimeListActivity">
         </activity>
         <activity android:name=".DatePickerActivity">
         </activity>
